<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg"
    android:paddingBottom="30dp">

    <LinearLayout
        android:id="@+id/layoutCalories"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/CalculateCalories"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Calories"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_calculation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Protein"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--            android:src="@drawable/ic_baseline_whatshot_24"-->

        <EditText
            android:id="@+id/kcal"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:hint="@string/amountG"
            android:inputType="numberDecimal"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:autofillHints=""
            android:layout_marginEnd="10dp"
            android:imeOptions="actionSend" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/gramm"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:hint="@string/gramm"
            android:inputType="numberDecimal"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:autofillHints=""
            android:layout_marginEnd="10dp"
            android:imeOptions="actionSend" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CaloriesAmount"
            android:textColor="@color/white"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/enter_calorie_amount"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:hint="@string/custom_calorie_value"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:autofillHints=""
            android:imeOptions="actionSend" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="Remove mode"
            android:textColor="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/button_states_1"
            android:text="@string/button_add_amount"
            android:textColor="@color/white"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</LinearLayout>