<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutCalories"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/iconAndTextGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/setGoal"
            android:textColor="@color/white"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/baseline_how_to_reg_24"/>


        <LinearLayout
            android:id="@+id/goalVisibility"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/caloriesGoal"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/enterCalorieGoal"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_marginStart="50dp"
                android:hint="@string/custom_calorie_value"
                android:textSize="15sp"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:autofillHints=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/proteinGoal"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/enterProteinGoal"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_marginStart="50dp"
                android:hint="@string/custom_calorie_value"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:autofillHints=""/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveGoals"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_states_1"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/saveGoals"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutClearData"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/iconAndTextReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/resetData"
            android:textColor="@color/white"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/baseline_clear_all_24"/>


        <LinearLayout
            android:id="@+id/clearVisibility"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearAll"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_states_1"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/clearAll"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearGoals"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_states_1"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/clearGoals"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearCalories"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_states_1"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/clearCalories"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearProtein"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_states_1"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/clearProtein"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearMeals"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/button_states_1"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/clearMeals"
            android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLanguage"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/iconAndTextLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/baseline_language_24"/>

        <LinearLayout
            android:id="@+id/languageVisibility"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/voiceLanguage"
                android:textColor="@color/white"/>

            <Spinner
                android:id="@+id/languageDropdown"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:spinnerMode="dropdown"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveLanguage"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/button_states_1"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/saveLang"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>