<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <FrameLayout
        android:id="@+id/headlineLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="?attr/header">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add"
            android:textSize="20sp"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:background="@color/transparent"
            app:drawableStartCompat="@drawable/baseline_add_meal_24"
            app:drawableTint="?attr/icon_color" />

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/caloriesSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calories"
            android:padding="8dp"
            android:background="?attr/selection_box"/>

        <TextView
            android:id="@+id/proteinSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Protein"
            android:padding="8dp"/>

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/enter_calorie_amount"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:hint="@string/amountHint"
            android:inputType="numberDecimal"
            android:textColor="?attr/text_color"
            android:textColorHint="?attr/text_color"
            android:layout_centerInParent="true"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_add_circle_24"
            android:background="?attr/custom_edit_text"
            android:drawablePadding="12dp"
            android:imeOptions="actionSend"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/button_additional_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/additional_settings"
            android:drawablePadding="5dp"
            android:background="@color/transparent"
            app:drawableStartCompat="@drawable/baseline_keyboard_arrow_down_24"
            app:drawableTint="?attr/icon_color" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutAdditionalSettings"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:background="@color/transparent">


        <EditText
            android:id="@+id/kcal"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:hint="@string/amountHint"
            android:inputType="numberDecimal"
            android:textColor="?attr/text_color"
            android:textColorHint="?attr/text_color"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_data_saver_off_24"
            android:drawableTint="?attr/icon_color"
            android:background="?attr/custom_edit_text"
            android:drawablePadding="12dp"
            android:imeOptions="actionSend"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <TextView
            android:id="@+id/multiplicationSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/kcal"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/x"
            android:background="@color/transparent"/>

        <EditText
            android:id="@+id/gramm"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_toEndOf="@+id/multiplicationSign"
            android:hint="@string/amountHint"
            android:inputType="numberDecimal"
            android:textColor="?attr/text_color"
            android:textColorHint="?attr/text_color"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_monitor_weight_24"
            android:drawableTint="?attr/icon_color"
            android:background="?attr/custom_edit_text"
            android:drawablePadding="12dp"
            android:imeOptions="actionSend"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <TextView
            android:id="@+id/typeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kcalDescription"
            android:layout_below="@+id/kcal"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grammDescription"
            android:layout_alignStart="@+id/gramm"
            android:layout_below="@+id/gramm"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="20dp"
        android:background="@color/transparent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/button_states_1"
            android:text="@string/button_add_amount"
            android:textColor="?attr/text_color"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    </LinearLayout>
