<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkestgrey"
    android:backgroundTint="@color/almostdarkestgrey"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:id="@+id/tempID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="63dp"
                android:layout_centerHorizontal="true"
                android:text="@string/Calories"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/usedKcal"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

</androidx.cardview.widget.CardView>