<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp">

    <FrameLayout
        android:id="@+id/headlineLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/header">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mealsHeadline"
            android:textSize="20sp"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:background="@color/transparent"
            app:drawableStartCompat="@drawable/baseline_ramen_dining_24"/>

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/transparent">

        <Spinner
            android:id="@+id/iconSelection"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:spinnerMode="dropdown"
            android:layout_marginEnd="10dp"
            android:popupBackground="@color/transparent"
            android:background="?attr/custom_edit_text"/>

        <EditText
            android:id="@+id/enterMealName"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/Name"
            android:inputType="text"
            android:textColor="?attr/text_color"
            android:textColorHint="?attr/text_color"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_text_snippet_24"
            android:drawableTint="?attr/icon_color"
            android:background="?attr/custom_edit_text"
            android:drawablePadding="12dp"
            android:imeOptions="actionSend"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/transparent">

        <EditText
            android:id="@+id/enterMealCalories"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="?attr/custom_edit_text"
            android:drawableStart="@drawable/baseline_data_saver_off_24"
            android:drawableTint="?attr/icon_color"
            android:drawablePadding="12dp"
            android:hint="@string/amountHint"
            android:imeOptions="actionSend"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="?attr/text_color"
            android:textColorHint="?attr/text_color"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/enterMealProtein"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_toEndOf="@+id/enterMealCalories"
            android:hint="@string/amountHint"
            android:inputType="number"
            android:textColor="?attr/text_color"
            android:textColorHint="?attr/text_color"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_pie_chart_outlined_24"
            android:drawableTint="?attr/icon_color"
            android:background="?attr/custom_edit_text"
            android:drawablePadding="12dp"
            android:imeOptions="actionSend"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caloriesDescription"
            android:layout_below="@+id/enterMealCalories"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proteinDescription"
            android:layout_alignStart="@+id/enterMealProtein"
            android:layout_below="@+id/enterMealProtein"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSaveMeal"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/button_states_1"
        android:text="@string/button_save"
        android:textColor="?attr/text_color"
        tools:ignore="TouchTargetSizeCheck" />



</LinearLayout>